@@ -602,6 +602,11 @@ mjb.charset.filename.translate=\u0430-a,\u0431-b,\u0432-v,\u0433-g,\u0434-d,\u04
 # - playback device with support for the same path (llink 2.2.5 is known to support it)
 mjb.scanner.archivescan.rar=false
 
+# should the files created from the rar use the rar's timestamp
+# false = use the timestamp from inside the rar
+# true = use the timestamp of the rar file itself
+mjb.scanner.archivescan.rar.userarlastmodified=false
+
 ################################################################
 ###                 Customization Properties
 ###  Below here are the parameters for various language plugins.
